2007-02-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3842]
	* sysdeps/posix/euidaccess.c [_LIBC] (euidaccess): Remove shortcut
	using __libc_enable_secure.

2007-02-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #3348]
	* malloc/memusage.sh: Cleanups.
	* debug/xtrace.sh: Quoting and trap changes.

2007-02-16  Ulrich Drepper  <drepper@redhat.com>

	* locale/iso-3166.def: Add entry for Serbia.
	* locale/iso-4217.def: Define RSD.

2007-02-15  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_helper.c (open_socket): Don't send padding bytes from
	reqdata.

2007-02-13  Ulrich Drepper  <drepper@redhat.com>

	* po/ru.po: Update from translation team.

2007-02-03  Ulrich Drepper  <drepper@redhat.com>

	* po/sv.po: Update from translation team. 

2007-02-12  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __amdfam10__
	to the list of i486+ CPUs.
	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.

2007-01-24  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/bits/byteswap.h (__bswap_32): Add __nocona__, __core2__
	and __geode__ to the list of i486+ CPUs.
	* sysdeps/x86_64/bits/byteswap.h (__bswap_32): Likewise.

2007-02-08  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3944]
	* time/strptime_l.c (__strptime_internal): Set have_mon for
	%b/%B/%h.  Set have_mon and have_mday if tm_mon and tm_mday
	have been computed from tm_yday and tm_year.  Don't crash
	in day_of_the_week or day_of_the_year if not have_mon
	and tm_mon contains bogus value.
	* time/Makefile (tests): Add tst-strptime3.
	* time/tst-strptime3.c: New test.

2007-02-05  Jakub Jelinek  <jakub@redhat.com>

	[BZ #3957]
	* posix/regcomp.c (parse_bracket_exp): Set '\n' bit rather than '\0'
	bit for RE_HAT_LISTS_NOT_NEWLINE.
	(build_charclass_op): Remove bogus comment.
	* posix/Makefile (tests): Add bug-regex27 and bug-regex28.
	* posix/bug-regex27.c: New test.
	* posix/bug-regex28.c: New test.

2007-02-02  Bruno Haible  <bruno@clisp.org>

	[BZ #3954]