@@ -1,3 +1,9 @@
+2007-02-21  Ulrich Drepper  <drepper@redhat.com>
+
+	[BZ #3458]
+	* sysdeps/unix/sysv/linux/posix_madvise.c: New file.
+	* sysdeps/unix/sysv/linux/syscalls.list: Remove posix_madvise entry.
+
 2007-02-17  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #3842]
